# distributed-image-processing-system

./: CMakeLists.txt  README.md  config.json
include/common/: base64.h  csv_writer.h
include/inference/: backend.h  factory.h  onnx_backend.h
include/master/: net_master.h
include/networking/: protocol.h  tcp_client.h  tcp_server.h
onnx converter/: convert_to_onnx.py  model.py  resnet.py
src/: CMakeLists.txt
src/common/: base64.cpp  csv_writer.cpp
src/inference/: onnx_backend.cpp
src/master/: main.cpp  net_master.cpp
src/networking/: protocol.cpp  tcp_client.cpp  tcp_server.cpp
src/worker/: main.cpp
